--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@
     <link rel="icon" type="image/svg+xml" href="/progress.svg" />
     <link rel="stylesheet" href="src/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>Progress Bars Collection</title>
   </head>
   <body>
-    <div id="app"></div>
+    <header class="header">
+      <h1 class="header__title">Progress Bars Collection</h1>
+      <div class="header__btns">
+          <a
+            href="https://github.com/nat-davydova/progress-bars-collection"
+            class="header__btn"
+            target="_blank"
+            title="Check On Github"
+          >Check On Github</a >
+      </div>
+    </header>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
