feat: add container structure and styles

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
           >Check On Github</a >
       </div>
     </header>
+
+    <div class="content">
+      <div class="container">
+      </div>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
