--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
 
     <div class="content">
       <div class="container">
+
+        <!-- EXAMPLE #! -->
+        <div class="example">
+          <h2 class="example__title">Example #1</h2>
+          <div class="example-1 example__progress-bars">
+            <progress max="100" value="25" data-title="SEO">25%</progress>
+            <progress max="100" value="50" data-title="Graphic Design">50%</progress>
+            <progress max="100" value="75" data-title="Content Creation">75%</progress>
+            <progress max="100" value="95" data-title="Web Development">95%</progress>
+          </div>
+        </div>
+
       </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
