example 1: add ts styles

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- EXAMPLE #! -->
         <div class="example">
           <h2 class="example__title">Example #1</h2>
-          <div class="example-1 example__progress-bars">
+          <div class="example-1 progress-bars">
             <progress max="100" value="25" data-title="SEO">25%</progress>
             <progress max="100" value="50" data-title="Graphic Design">50%</progress>
             <progress max="100" value="75" data-title="Content Creation">75%</progress>
