--- a/index.html
+++ b/index.html
@@ -59,6 +59,17 @@
           </div>
         </div>
 
+        <!-- EXAMPLE #4 -->
+        <div class="example">
+          <h2 class="example__title">Example #4</h2>
+          <div class="example-4 progress-bars">
+            <progress max="100" value="100" data-title="SEO">25%</progress>
+            <progress max="100" value="50" data-title="Graphic Design">50%</progress>
+            <progress max="100" value="75" data-title="Content Creation">75%</progress>
+            <progress max="100" value="95" data-title="Web Development">95%</progress>
+          </div>
+        </div>
+
       </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
